Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32163

Crash recovery fails after DROP TABLE in system tablespace

    XMLWordPrintable

Details

    Description

      Fix for MDEV-32028 cherry-picked into preview-11.3-preview breaks mariabackup.sys_truncate test sporadically.

      There are 5 InnoDB commits in 11.3 preview, after the first one the test already starts to fail.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.