MDEV-32163 Crash recovery fails after DROP TABLE in system tablespace

fseg_free_extent(): After fsp_free_extent() succeeded, properly
mark the affected pages as freed. We failed to write FREE_PAGE records.

This bug was revealed or caused by
commit e938d7c18f6f117b63fcfc50dd975029d92409a7 (MDEV-32028).