storage/innobase/fsp/fsp0fsp.cc
@@ -2683,14 +2683,23 @@ fseg_free_extent(
 			      not_full_n_used - descr_n_used);
 	}
 
+	std::vector<uint8_t> going_to_free;
+	static_assert(FSP_EXTENT_SIZE_MIN == 256, "compatibility");
+	static_assert(FSP_EXTENT_SIZE_MAX == 64, "compatibility");
+
 	for (uint32_t i = 0; i < FSP_EXTENT_SIZE; i++) {
 		if (!xdes_is_free(descr, i)) {
-			buf_page_free(space, first_page_in_extent + i, mtr,
-				      __FILE__, __LINE__);
+			going_to_free.emplace_back(uint8_t(i));
 		}
 	}
 
 	fsp_free_extent(space, page, mtr);
+
+	for (uint32_t i : going_to_free) {
+		mtr->free(*space, first_page_in_extent + i);
+		buf_page_free(space, first_page_in_extent + i, mtr,
+			      __FILE__, __LINE__);
+	}
 }
 
 /**********************************************************************//**
